<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@android:color/white">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewWelcome" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:textAlignment="center" android:textColor="@android:color/black"
                android:fontFamily="@font/biryani_semibold" android:textSize="18sp"/>
        <EditText
                android:layout_width="0dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextName"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text_style" android:layout_height="50dp"
                android:textAlignment="center" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"/>
        <EditText
                android:layout_width="0dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextYearNbranch"
                android:hint="@string/yearNbranch"
                app:layout_constraintEnd_toEndOf="@+id/editTextName"
                app:layout_constraintStart_toStartOf="@+id/editTextName"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editTextName"
                android:background="@drawable/edit_text_style" android:layout_height="50dp"
                android:textAlignment="center"/>
        <EditText
                android:layout_width="0dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextPosition"
                android:hint="@string/position" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextYearNbranch"
                app:layout_constraintEnd_toEndOf="@+id/editTextYearNbranch"
                app:layout_constraintStart_toStartOf="@+id/editTextYearNbranch"
                android:background="@drawable/edit_text_style" android:layout_height="50dp"
                android:textAlignment="center"/>
        <EditText
                android:layout_width="0dp"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editTextPhone"
                android:hint="@string/phone"
                app:layout_constraintEnd_toEndOf="@+id/editTextPosition"
                app:layout_constraintStart_toStartOf="@+id/editTextPosition"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editTextPosition"
                android:background="@drawable/edit_text_style" android:layout_height="50dp"
                android:textAlignment="center"/>
        <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:id="@+id/buttonsaveDetails" app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
                app:layout_constraintStart_toStartOf="@+id/editTextPhone" android:fontFamily="@font/biryani_semibold"
                android:textColor="@android:color/white" app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
