<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent"
       android:fillViewport="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity" android:background="@android:color/white">
        <EditText
                android:layout_width="0dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@drawable/edit_text_style"
                android:id="@+id/editTextEmail"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/emailHint"
                android:fontFamily="@font/biryani_semibold" android:layout_height="50dp" android:paddingLeft="20dp"
                android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTextPassword"
                android:background="@drawable/edit_text_style"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                android:hint="@string/passwordHint" android:autofillHints="password" android:paddingLeft="20dp"
                android:fontFamily="@font/biryani_semibold"/>
        <Button
                android:text="@string/loginButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:autofillHints="@string/emailHint"
                android:id="@+id/buttonLogin" app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextPassword" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" android:textColor="@android:color/white"
                android:fontFamily="@font/biryani_semibold"
                app:layout_constraintHorizontal_bias="0.497"/>
        <TextView
                android:text="New User ?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/passwordHint"
                android:id="@+id/textViewNewUser" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                app:layout_constraintEnd_toEndOf="@+id/buttonLogin" android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@android:color/black" android:fontFamily="@font/biryani_semibold"
                android:layout_marginBottom="200dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextEmail" android:fontFamily="@font/biryani_semibold"
                android:textSize="30sp" android:textColor="@android:color/holo_blue_dark"
                android:textAlignment="center" android:text="@string/AccountLogin"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
